--- a/index.html
+++ b/index.html
@@ -5,184 +5,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>국내항공사 면접 순발력 키우기</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f9fa; }
-        .container { margin: 50px auto; padding: 20px; background: white; border-radius: 10px; width: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        .btn { display: block; width: 80%; margin: 10px auto; padding: 10px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer; }
-        .purple-btn { background-color: #9370DB; color: white; }
-        .purple-btn:hover { background-color: #7B68EE; }
-        .hidden { display: none; }
-        #timer { font-size: 20px; font-weight: bold; margin-top: 10px; }
-        .copyright { font-size: 14px; color: gray; margin-top: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #333;
+        }
+        .question-box {
+            margin: 20px 0;
+            padding: 15px;
+            background-color: #e3e7ff;
+            border-radius: 5px;
+        }
+        .timer {
+            font-size: 20px;
+            font-weight: bold;
+            color: red;
+            margin: 10px 0;
+        }
+        .button {
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: white;
+            margin-top: 10px;
+        }
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <div class="container" id="mainPage">
-        <h2>국내항공사 면접 순발력 키우기</h2>
-        <p class="copyright">Platinum Crew</p>
-        <button class="btn purple-btn" onclick="startQuiz(1)">1. 필수 기출 문제</button>
-        <button class="btn purple-btn" onclick="startQuiz(2)">2. 돌발질문</button>
-        <button class="btn purple-btn" onclick="startQuiz(3)">3. 시사문제</button>
-        <button class="btn purple-btn" onclick="startQuiz(4)">4. 롤플레잉</button>
-    </div>
 
-    <div class="container hidden" id="quizPage">
-        <h2 id="question"></h2>
-        <div id="timer">남은 시간: 120초</div>
-        <button class="btn purple-btn hidden" id="nextBtn" onclick="nextQuestion()">다음 질문</button>
-        <button class="btn purple-btn hidden" id="returnBtn" onclick="returnToMain()">메인 페이지로 돌아가기</button>
+    <div class="container">
+        <h2>국내항공사 면접 순발력 키우기</h2>
+        <button class="button" onclick="startInterview()">1. 필수 기출 문제</button>
+
+        <div id="question-section" class="hidden">
+            <div id="question-box" class="question-box"></div>
+            <div id="timer" class="timer"></div>
+        </div>
+
+        <button id="restart-button" class="button hidden" onclick="restart()">다시 주제로 넘어가기</button>
     </div>
 
     <script>
-        const questionCategories = {
-            1: [
-                "전공소개 해 주세요", "그 전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
-                "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
-                "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
-                "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
-                "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
-                "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?", "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?",
-                "첫지원자라면 승무원 준비는 어떻게 했나요?", "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
-                "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?", "승무원이 되면 어떤 단점이 있을까요?",
-                "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?", "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
-                "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.", "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지?",
-                "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.", "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?",
-                "왜 우리 항공사에서 일하고 싶은지?", "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
-                "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.", "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.",
-                "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?", "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
-                "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?", "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
-            ]
-            2: [
-                "과정과 결과 중 무엇이 더 중요하다고 생각하나요?",
-                "지금 면접장을 사자성어로 표현해주세요",
-                "무인도에 가지고 가고 싶은 3가지와 그 이유는?",
-                "좋아하는 속담과 그 이유",
-                "면접보러 오면서 무슨 생각했는지 간단히 말해보기",
-                "15층에 거주하시는 할머니 한분이 엘리베이터 고장으로 올라가지 못하고 계실때 어떻게 대처할 건지",
-                "나를 사물로 표현한다면?",
-                "이것 만큼은 용서가 안된다 하는 것이 있다면?",
-                "소확행 이야기 해보기",
-                "힘든일이 있으면 누구에게 의지하는 편인지?",
-                "대통령이 된다면 어떤 공약을 걸건지",
-                "아프리카에서 모피를 파는 방법",
-                "좋아하는 집안일과 싫어하는 집안일은?",
-                "구독중인 유튜브채널은?",
-                "남승무원과 여승무원의 차이는?",
-                "호감가지 않는 이성이 계속 다가오면 어떻게 할건지?",
-                "웃긴 이야기 하나씩 해주세요",
-                "이순신과 세종대왕의 리더십 차이는 무엇이라고 생각하나요?",
-                "역지사지에 대해 이야기 해보세요", "가장 자신있는 집안일과 노하우", "오늘 집에서 나오는 순간까지 '아..나 이거 부족한데 괜찮을까?' 했던 것에 대해 이야기 해보기", 
-                "잘하는 요리 하나 말하고 비법 말해보기", "요즘 혁신적인 상품들이 많이 나오고 있는데, 처음보고 정말 신기하고 놀라웠던 제품 아무거나 하나 말해보기",
-                "약속이 있어서 나갔는데 흰 옷에 얼룩이 묻으면 어떻게 할 것인지?", "나의 미래의 시부모님에게 이것만큼은 들키고 싶지 않다 생각하는 것은?",
-                "요즘 20대들이 만나면 대화의 화두는 무엇인지?", "메이크업 어디서 받았는지?", "최근 읽은 기사 1분브리핑 ( 항공사관련/정치제외 )",
-                "자신이 좋아하는 커피와 이유 말해보기", "지금 이곳이 면접장이 아닌 카페라고 상상하고 본인이 무엇을 어떻게 하고 있을 것 같은지 상상해서 묘사해보기",
-                "어제 뭐했는지?", "최근에 꾼 꿈 중에 기분 좋았던 꿈", "곧 크리스마스인데 가장 기억에 남는 선물", "휴가 3일동안 300만원이 주어진다면 무엇을 할건지",
-                "본인이 쓰는 향수에 대해 이야기해보기", "용돈은 한달에 얼마나 받고 주로 어디에 쓰는지", "20년 뒤에도 승무원이라는 직업이 유망할 것 같은지",
-                "자신의 컴플렉스 이야기 해보기", "끝나고 뭐먹을건지", "요즘 TV 프로그램 뭐보는지", "나의 삶의 핵심가치는?",
-                "남자들의 화장에 대한 본인의 생각", "자신을 꽃에 비유한다면?", "기념하고 있는 기념일", "용기란 무엇인지",
-                "합격하면 누구에게 가장 먼저 알릴 것인지", "나에게 영상편지를 쓴다고 생각하고 자신에게 하고 싶은 말 해보기",
-                "승무원이 되어서 일하는데 왜 대형항공사 안가고, 저비용항공사에 왔냐고 물어보면 어떻게 반응할건지?",
-                "지금 심정을 음악으로 표현하면 어떤 노래인가요?", "자존감과 자존심의 차이점은 무엇일까요?",
-                "찐만두와 군만두 중 어떤 걸 더 좋아하는지?", "100억 로또에 당첨된다면 어떻게 쓸 건가요?",
-                "라면을 끓이는 본인만의 노하우가 있다면 무엇인가요?", "기내에서 가장 청결해야 하는 공간은 어디라고 생각하나요?",
-                "본인만의 장보기 노하우가 있다면 무엇인가요?", "대청소를 할 때 계획이나 순서가 있나요?", "집안일을 돈으로 환산하면 얼마라고 생각하나요?",
-                "승무원 과외나 학원이 도움이 된다고 생각하나요?", "사람을 등급으로 나눌수 있을까요? 그렇다면 어떤 방식으로 나눌 수 있나요?",
-                "지금 떠오르는 사자성어가 있다면 무엇인가요?", "의무를 다 하지 않는 사람에게 권리를 줘도 될까요?",
-                "쇼핑할 때 본인만의 기준이 있다면 무엇인가요?", "비행기표는 주로 어디에서 사나요?",
-                "더위와 추위 중 무엇을 더 좋아하나요?", "줄임말 아는거 알려주고, 그런 줄임말을 쓰는 것에 대해 어떻게 생각하는지?"
-            ]
-            3: [
-                "최근 사회 이슈나 키워드로 어떤 것을 꼽을 수 있을까요?", "과학 기술 발전에 대해 어떻게 생각하나요?",
-                "sns 사용하는지? sns 사용에 대해 어떻게 생각하는지?", "저출산을 해결하기 위한 방법은?",
-                "mz세대와 기성세대의 차이점이 무엇이라고 생각하는지?", "청년실업의 이유와 대책은?",
-                "노키즈존에 대한 찬반과 이유 말해주세요", "인공지능 ai를 서비스에 어떻게 적용할 수 있을지?",
-                "러시아-우크라이나 전쟁에 대해 말해보세요", "최저임금에 대해 어떻게 생각하는지?", "lcc산업이 발전하게 된 원인과 그에 따른 대형항공사의 대책은?",
-                "기성세대가 고쳤으면 하는 것은?", "유튜브 스타트업에 대해 본인의 견해", "층간 소음에 대해 어떻게 생각하는지?",
-                "성형수술에 대해 반대하는지 찬성하는지?", "청년실업이 문제인데, 본인이 생각하는 좋은 기업과 좋은 직업은 어떤 거라고 생각하는지?",
-                "카카오톡 생일인 친구 알려주는 서비스에 대해 찬성하는지, 반대하는지?",
-                "학생들은 학업에 열중해야 하는지, 학업 이외의 다양한 경험들을 함께하는 게 좋은지?",
-                "고령화 시대에 필요한 제도는?", "mz에게 워라밸이란?", "장애인 주차구역에 대해 어떻게 생각하는지?",
-                "중국의 무비자 입국정책이 항공사에 어떤 영향을 미칠 것 같은지?"
-            ]
-            4: [
-                "기내식에 머리카락이 나와 컴플레인을 하는 승객이 있다면?",
-                "승객이 컴플레인을 건다면 어떻게 할건지?",
-                "기내에서 작은 전자기기가 화재가 난다면 어떻게 할 것인지?",
-                "기내에서 어린이 손님을 많이 만나게 될 건데, 나만의 어떤 방법으로 아이들과 친해질건지?",
-                "비행 중 승객이 폐쇄공포증이 있다며 고통을 호소하는 상황에 어떻게 대처할건지?",
-                "기내 난동 손님 대처법에 대해 이야기 해 주세요.",
-                "손님이 헤드폰을 쓴 채로 내리신다면 어떻게 할 것인지?",
-                "선배가 하는 말이 내가 알고 있는 메뉴얼과 다르다면 어떻게 할지?",
-                "상사가 안전에 위배되는 일을 시킨다면 어떻게 대처할 것인지?",
-                "20대, 30대 여성들이 정말 까다로운데 어떻게 서비스를 할건지?",
-                "비빔밥이 다 떨어진 상황에, 비빔밥을 먹고 싶어하는 승객을 만나면 어떻게 설명할건지?",
-                "기내 특별식을 신청하지 않은 손님이 기내특별식을 달라고 하는 상황에 미리 신청하지 않아 별도의 특별식이 기내에 없다고 설명을 드렸더니 손님이 화를 낸다면 어떻게 할 것인지?",
-                "기내에서 우는 아이를 어떻게 달랠 것인지?",
-                "동기가 실수한 것을 내가 잘못했다고 선배가 오해하고 있는 상황. 본인의 인사점수에 영향이 가서 진급도 못할 수 있는 상황이라면 어떻게 할 것인지?",
-                "승객이 자꾸 번호를 달라고 하면 어떻게 할 건지?",
-                "기내에서 케어를 잘 해야하는 승객은 어떤 승객일지?",
-                "어린이 손님이 승무원이 뭐냐고 물어보면 어떻게 설명할건지?",
-                "손님 중 한분이 '어떻게 하면 승무원이 될 수 있냐'고 물어보는 상황에 어떻게 조언해줄건지?",
-                "손님에게 화를 내면 안되는 이유에 대해 설명해보기?",
-                "내가 일하는 비행기에 나의 남자친구가 모르는 여성과 탑승한 것을 목격한 상황에 어떻게 할건지?",
-                "신혼부부가 탑승했는데 떨어져서 앉아야 하는 상황에 기내는 만석이고 다른 손님들이 바꿔주려고 하지 않는다면?",
-                "기내에서 서로 다른 국적의 손님들이 별다른 이유없이 싸우는 모습을 목격하면 어떻게 할것인지?",
-                "선배에게 부당한 지시를 받는다면?",
-                "동기가 집단 따돌림을 당하고 있으면 어떻게 행동할 것인지?",
-                "음료 서비스를 하다가 오렌지 주스를 손님 옷에 실수로 흘렸을 때 어떻게 대처할 건지?",
-                "선배가 본인의 실수를 본인에게 전가한다면 어떻게 할 것인지?",
-                "유명연예인이 기내에 탄다면 어떻게 할건지?",
-                "영어를 못하는 승객에게 기내식 서비스를 어떻게 제공할 건지?",
-                "이륙 후 휴대폰을 사용하는 승객을 어떻게 대응할건지?",
-                "담요를 요청하는 승객이 있는데, 담요가 없다면?"
-            ]
-        };
+        const questions = [
+            "전공소개 해 주세요", "그 전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?",
+            "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?", "전공을 살리지 않는 이유는 뭔가요? (항공과 답변x)",
+            "본인이 항공과라면, 어떻게 승무원에 기여할 수 있나요? (비항공과 답변x)", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
+            "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.",
+            "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지", "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.",
+            "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
+            "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?",
+            "스트레스를 받으면 어떻게 해소하나요?", "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?",
+            "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?", "첫지원자라면 승무원 준비는 어떻게 했나요?",
+            "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
+            "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?",
+            "승무원이 되면 어떤 단점이 있을까요?", "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?",
+            "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
+            "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.",
+            "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지? 지원해본적이 없다면 왜 우리 항공사만 고집하는지 이유를 알려주세요.",
+            "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.",
+            "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?", "왜 우리 항공사에서 일하고 싶은지?",
+            "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
+            "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.",
+            "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.", "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?",
+            "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
+            "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?",
+            "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
+        ];
 
+        let questionIndex = 0;
         let selectedQuestions = [];
-        let currentQuestionIndex = 0;
-        let timer;
+        let timerInterval;
 
-        function startQuiz(category) {
-            document.getElementById('mainPage').classList.add('hidden');
-            document.getElementById('quizPage').classList.remove('hidden');
-            selectedQuestions = questionCategories[category].sort(() => 0.5 - Math.random()).slice(0, 5);
-            currentQuestionIndex = 0;
+        function startInterview() {
+            selectedQuestions = questions.sort(() => 0.5 - Math.random()).slice(0, 5);
+            questionIndex = 0;
+            document.getElementById("question-section").classList.remove("hidden");
+            document.getElementById("restart-button").classList.add("hidden");
             showQuestion();
         }
 
         function showQuestion() {
-            if (currentQuestionIndex < selectedQuestions.length) {
-                document.getElementById('question').innerText = selectedQuestions[currentQuestionIndex];
-                document.getElementById('nextBtn').classList.remove('hidden');
+            if (questionIndex < selectedQuestions.length) {
+                document.getElementById("question-box").innerText = selectedQuestions[questionIndex];
                 startTimer();
+                questionIndex++;
             } else {
-                document.getElementById('question').innerText = "질문이 끝났습니다!";
-                document.getElementById('nextBtn').classList.add('hidden');
-                document.getElementById('returnBtn').classList.remove('hidden');
+                endSession();
             }
-        }
-
-        function nextQuestion() {
-            currentQuestionIndex++;
-            showQuestion();
         }
 
         function startTimer() {
             let timeLeft = 120;
-            document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
-            timer = setInterval(() => {
+            document.getElementById("timer").innerText = `남은 시간: 2:00`;
+            clearInterval(timerInterval);
+            timerInterval = setInterval(() => {
                 timeLeft--;
-                document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
+                document.getElementById("timer").innerText = `남은 시간: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
                 if (timeLeft <= 0) {
-                    clearInterval(timer);
-                    currentQuestionIndex++;
+                    clearInterval(timerInterval);
                     showQuestion();
                 }
             }, 1000);
         }
 
-        function returnToMain() {
+        function endSession() {
+            document.getElementById("question-box").innerText = "세션이 종료되었습니다!";
+            document.getElementById("restart-button").classList.remove("hidden");
+        }
+
+        function restart() {
             location.reload();
         }
     </script>
+
 </body>
 </html>
