--- a/index.html
+++ b/index.html
@@ -5,135 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>국내항공사 면접 순발력 키우기</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f8f9fa;
-        }
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #333;
-        }
-        .question-box {
-            margin: 20px 0;
-            padding: 15px;
-            background-color: #e3e7ff;
-            border-radius: 5px;
-        }
-        .timer {
-            font-size: 20px;
-            font-weight: bold;
-            color: red;
-            margin: 10px 0;
-        }
-        .button {
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            margin-top: 10px;
-        }
-        .hidden {
-            display: none;
-        }
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f9fa; }
+        .container { margin: 50px auto; padding: 20px; background: white; border-radius: 10px; width: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .btn { display: block; width: 80%; margin: 10px auto; padding: 10px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer; }
+        .purple-btn { background-color: #9370DB; color: white; }
+        .purple-btn:hover { background-color: #7B68EE; }
+        .hidden { display: none; }
+        #timer { font-size: 20px; font-weight: bold; margin-top: 10px; }
+        .copyright { font-size: 14px; color: gray; margin-top: 10px; }
     </style>
 </head>
 <body>
-
-    <div class="container">
+    <div class="container" id="mainPage">
         <h2>국내항공사 면접 순발력 키우기</h2>
-        <button class="button" onclick="startInterview()">1. 필수 기출 문제</button>
+        <p class="copyright">Platinum Crew</p>
+        <button class="btn purple-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
+        <button class="btn purple-btn">2. 돌발질문</button>
+        <button class="btn purple-btn">3. 시사문제</button>
+        <button class="btn purple-btn">4. 롤플레잉</button>
+    </div>
 
-        <div id="question-section" class="hidden">
-            <div id="question-box" class="question-box"></div>
-            <div id="timer" class="timer"></div>
-        </div>
-
-        <button id="restart-button" class="button hidden" onclick="restart()">다시 주제로 넘어가기</button>
+    <div class="container hidden" id="quizPage">
+        <h2 id="question"></h2>
+        <div id="timer">남은 시간: 120초</div>
+        <button class="btn purple-btn hidden" id="nextBtn" onclick="nextQuestion()">다음 질문</button>
+        <button class="btn purple-btn hidden" id="returnBtn" onclick="returnToMain()">메인 페이지로 돌아가기</button>
     </div>
 
     <script>
         const questions = [
-            "전공소개 해 주세요", "그 전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?",
-            "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?", "전공을 살리지 않는 이유는 뭔가요? (항공과 답변x)",
-            "본인이 항공과라면, 어떻게 승무원에 기여할 수 있나요? (비항공과 답변x)", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
-            "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.",
-            "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지", "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.",
-            "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
-            "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?",
-            "스트레스를 받으면 어떻게 해소하나요?", "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?",
-            "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?", "첫지원자라면 승무원 준비는 어떻게 했나요?",
-            "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
-            "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?",
-            "승무원이 되면 어떤 단점이 있을까요?", "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?",
-            "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
-            "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.",
-            "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지? 지원해본적이 없다면 왜 우리 항공사만 고집하는지 이유를 알려주세요.",
-            "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.",
-            "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?", "왜 우리 항공사에서 일하고 싶은지?",
-            "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
-            "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.",
-            "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.", "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?",
-            "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
-            "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?",
-            "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
+            "전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
+            "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
+            "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
+            "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
+            "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
+            "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?", "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?",
+            "첫지원자라면 승무원 준비는 어떻게 했나요?", "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
+            "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?", "승무원이 되면 어떤 단점이 있을까요?",
+            "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?", "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
+            "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.", "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지?",
+            "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.", "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?",
+            "왜 우리 항공사에서 일하고 싶은지?", "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
+            "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.", "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.",
+            "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?", "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
+            "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?", "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
         ];
 
-        let questionIndex = 0;
         let selectedQuestions = [];
-        let timerInterval;
+        let currentQuestionIndex = 0;
+        let timer;
 
-        function startInterview() {
+        function startQuiz() {
+            document.getElementById('mainPage').classList.add('hidden');
+            document.getElementById('quizPage').classList.remove('hidden');
             selectedQuestions = questions.sort(() => 0.5 - Math.random()).slice(0, 5);
-            questionIndex = 0;
-            document.getElementById("question-section").classList.remove("hidden");
-            document.getElementById("restart-button").classList.add("hidden");
+            currentQuestionIndex = 0;
             showQuestion();
         }
 
         function showQuestion() {
-            if (questionIndex < selectedQuestions.length) {
-                document.getElementById("question-box").innerText = selectedQuestions[questionIndex];
+            if (currentQuestionIndex < selectedQuestions.length) {
+                document.getElementById('question').innerText = selectedQuestions[currentQuestionIndex];
+                document.getElementById('nextBtn').classList.add('hidden');
                 startTimer();
-                questionIndex++;
             } else {
-                endSession();
+                document.getElementById('question').innerText = "질문이 끝났습니다!";
+                document.getElementById('nextBtn').classList.add('hidden');
+                document.getElementById('returnBtn').classList.remove('hidden');
             }
         }
 
-        function startTimer() {
-            let timeLeft = 120;
-            document.getElementById("timer").innerText = `남은 시간: 2:00`;
-            clearInterval(timerInterval);
-            timerInterval = setInterval(() => {
-                timeLeft--;
-                document.getElementById("timer").innerText = `남은 시간: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
-                if (timeLeft <= 0) {
-                    clearInterval(timerInterval);
-                    showQuestion();
-                }
-            }, 1000);
-        }
-
-        function endSession() {
-            document.getElementById("question-box").innerText = "세션이 종료되었습니다!";
-            document.getElementById("restart-button").classList.remove("hidden");
-        }
-
-        function restart() {
+        function returnToMain() {
             location.reload();
         }
     </script>
-
 </body>
 </html>
