--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container" id="mainPage">
         <h2>국내항공사 면접 순발력 키우기</h2>
         <p class="copyright">Platinum Crew</p>
-        <button class="btn purple-btn" onclick="startQuiz()">1. 필수 기출 문제</button>
-        <button class="btn purple-btn">2. 돌발질문</button>
-        <button class="btn purple-btn">3. 시사문제</button>
-        <button class="btn purple-btn">4. 롤플레잉</button>
+        <button class="btn purple-btn" onclick="startQuiz(1)">1. 필수 기출 문제</button>
+        <button class="btn purple-btn" onclick="startQuiz(2)">2. 돌발질문</button>
+        <button class="btn purple-btn" onclick="startQuiz(3)">3. 시사문제</button>
+        <button class="btn purple-btn" onclick="startQuiz(4)">4. 롤플레잉</button>
     </div>
 
     <div class="container hidden" id="quizPage">
@@ -33,32 +33,23 @@
     </div>
 
     <script>
-        const questions = [
-            "전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?",
-            "전공을 살리지 않는 이유는 뭔가요?", "휴학 / 졸업 후 공백기가 있네요? 이 때 뭐했나요?",
-            "대학 생활 중에 가장 기억에 남는 활동은 어떤게 있나요?", "지금까지 살면서 후회되는 점은 이야기 해주세요.", "지금 일을 한다면 무엇을 하고, 그걸 왜 관두려고 하는지",
-            "서비스 경험을 하면서 힘들었던 점 이야기 해주세요.", "본인이 다른 지원자보다 이것만큼은 잘한다. 강점이다. 하는 것 이야기해주세요.", "본인의 성격에 대해 이야기 해주세요.",
-            "본인의 단점은 뭔가요?", "승무원에 치명적인 본인의 단점에 대해 이야기 해주세요.", "언제 가장 스트레스를 받나요?", "스트레스를 받으면 어떻게 해소하나요?",
-            "여가시간에 주로 뭐하세요?", "승무원이 되면 체력적으로 힘들텐데, 체력관리 어떻게 하나요?", "롤모델이 누군가요?", "승무원이 되기 위해서 어떤 노력을 했나요?",
-            "첫지원자라면 승무원 준비는 어떻게 했나요?", "재지원자라면 왜 떨어진 것 같나요? 그리고 어떤 점이 달라져서 왔나요?", "서비스란 뭐라고 생각하세요?",
-            "승무원은 어떤 일을 하는 사람인가요?", "승무원이 되면 어떤 승무원이 되고 싶으세요?", "승무원이 되면 어떤 장점이 있을까요?", "승무원이 되면 어떤 단점이 있을까요?",
-            "승무원에게 이것만큼은 꼭 필요하다! 하는 자질/역량은 어떤게 있나요?", "본인이 가진 승무원의 자질 하나 이야기 해주세요.", "승무원으로 일할 때 생각과 다르게 너무 힘들면 어떻게 극복할 건가요?",
-            "본인의 직업관에 대해 말해주세요.", "내가 받아봤던 최고의 서비스 이야기 해주세요.", "내가 받아봤던 최악의 서비스 이야기 해주세요.", "다른 항공사 지원해본적 있나요? 지원해봤으면 왜 우리회사에 오려고 하는지?",
-            "자기소개 해주세요.", "자기소개 + 지원동기 합쳐서 1분안에 말해주세요.", "자신을 한단어로 소개해주세요.", "자신을 색깔에 비유해서 설명해주세요.", "왜 승무원이 되고 싶나요?",
-            "왜 우리 항공사에서 일하고 싶은지?", "우리항공사만의 장점이 뭐라고 생각하세요?", "우리항공사가 가진 단점은 뭘까요? 그러면 그걸 어떻게 개선해야 할지도 말해주세요.",
-            "우리 항공사에 추천하고 싶은 신규 취항지와 그 이유를 말해주세요.", "우리 항공사에 추천하고 싶은 신규 기내서비스 추천해주세요.", "우리 항공사에 추천하고 싶은 신규 기내식 추천해주세요.",
-            "우리 항공사의 모델을 새롭게 뽑는다면 누구를 추천하고 싶은지?", "우리항공사 최근 기사 이야기 해주세요.", "우리회사에 대해 아는 것 하나씩 말해보세요.", "우리 항공사 하면 떠오르는 이미지 이야기 해주세요.",
-            "우리 항공사는 이런 색깔이다. 하는 것 이야기 해주세요.", "우리 항공사 서비스 중 가장 해보고 싶은 것은?", "우리 항공사 유니폼에 대해 어떻게 생각하는지?"
-        ];
+        const questionCategories = {
+            1: ["전공소개 해 주세요", "전공을 왜 선택했나요?", "승무원과 전공에는 어떤 연관이 있나요?", "본인이 승무원이 된다면, 해당 전공이 어떻게 도움이 된다고 생각하나요?"],
+            2: ["역지사지에 대해 이야기 해보세요", "가장 자신있는 집안일과 노하우", "오늘 집에서 나오는 순간까지 '아..나 이거 부족한데 괜찮을까?' 했던 것에 대해 이야기 해보기"],
+            3: ["최근 사회 이슈나 키워드로 어떤 것을 꼽을 수 있을까요?", "과학 기술 발전에 대해 어떻게 생각하나요?", "sns 사용하는지? sns 사용에 대해 어떻게 생각하는지?"],
+            4: ["승객이 컴플레인을 건다면 어떻게 할건지?", "기내에서 작은 전자기기가 화재가 난다면 어떻게 할 것인지?", "20대, 30대 여성들이 정말 까다로운데 어떻게 서비스를 할건지?"]
+        };
 
         let selectedQuestions = [];
         let currentQuestionIndex = 0;
         let timer;
 
-        function startQuiz() {
+        function startQuiz(category) {
             document.getElementById('mainPage').classList.add('hidden');
             document.getElementById('quizPage').classList.remove('hidden');
-            selectedQuestions = questions.sort(() => 0.5 - Math.random()).slice(0, 5);
+
+            // 카테고리별 질문에서 3개 랜덤 선택
+            selectedQuestions = questionCategories[category].sort(() => 0.5 - Math.random()).slice(0, 3);
             currentQuestionIndex = 0;
             showQuestion();
         }
@@ -66,13 +57,33 @@
         function showQuestion() {
             if (currentQuestionIndex < selectedQuestions.length) {
                 document.getElementById('question').innerText = selectedQuestions[currentQuestionIndex];
-                document.getElementById('nextBtn').classList.add('hidden');
+                document.getElementById('nextBtn').classList.remove('hidden');
                 startTimer();
             } else {
                 document.getElementById('question').innerText = "질문이 끝났습니다!";
                 document.getElementById('nextBtn').classList.add('hidden');
                 document.getElementById('returnBtn').classList.remove('hidden');
             }
+        }
+
+        function nextQuestion() {
+            clearInterval(timer);
+            currentQuestionIndex++;
+            showQuestion();
+        }
+
+        function startTimer() {
+            let timeLeft = 120;
+            document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
+            timer = setInterval(() => {
+                timeLeft--;
+                document.getElementById('timer').innerText = `남은 시간: ${timeLeft}초`;
+                if (timeLeft <= 0) {
+                    clearInterval(timer);
+                    currentQuestionIndex++;
+                    showQuestion();
+                }
+            }, 1000);
         }
 
         function returnToMain() {
